ABYSSP-382 get external url for load schema freom url alert long message overflow add new api now not adds immeiately, instead load temporary api to vuex store fix bugs if current oas doeasn have components if oas dont have  paths add add path button 425: Unable to register new business API via Upload File & Upload from URL 426: API is stored immediately after Start is clicked > new api add/save moved to edit apiconvert yaml to json on upload/url swagger-to-oas (2 to 3) api (but API is not working)

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -797,12 +797,18 @@
     top: 1rem;
     right: 1rem;
     z-index: 3000;
+    overflow: auto;
+    max-width: 90%;
+    max-height: 50vh;
   }
   .alert-t-l {
     position: fixed;
     top: 1rem;
     left: 1rem;
     z-index: 3000;
+    overflow: auto;
+    max-width: 90%;
+    max-height: 50vh;
   }
   .alert-dismissible .close {
     padding: .75rem 1.25rem;
